welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: '(' expected but '{' found.
	} else if { 
                  ^Balin:11: error: illegal start of simple expression
}
^