welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMur()) {
	if (!porteBiscuit()) {
		retourne()
		while (!estSurBiscuit()) {
			avance();
		} 
		prendBiscuit()
	} else if { 
		
	}
}
droite();
avance();
gauche();
avance();